챗봇기능구현

--- a/chatbot/pdf_converter.ipynb
+++ b/chatbot/pdf_converter.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-26T09:43:59.569643Z",
-     "start_time": "2025-11-26T09:43:59.553866Z"
+     "end_time": "2025-11-27T05:42:51.788628Z",
+     "start_time": "2025-11-27T05:42:51.765601Z"
     }
    },
    "cell_type": "code",
@@ -41,13 +41,13 @@
    ],
    "id": "90c010828ec95d5",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-26T09:44:04.279074Z",
-     "start_time": "2025-11-26T09:44:04.170060Z"
+     "end_time": "2025-11-27T05:51:23.244440Z",
+     "start_time": "2025-11-27T05:51:22.277347Z"
     }
    },
    "cell_type": "code",
@@ -69,8 +69,6 @@
     "MD_DIR.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "# 🚨 중요: PDF 원본 파일 이름(값)과 RAG 시스템의 고정 식별자(키) 매핑\n",
-    "# RAG 시스템의 분류 로직은 이 키(MD 파일 이름, 확장자 제외)를 사용합니다.\n",
-    "# 이제 MD 파일 이름과 PDF 파일 이름이 확장자만 다르고 동일합니다.\n",
     "PDF_MAPPING: Dict[str, str] = {\n",
     "    # [RAG 식별자 (MD 파일 이름)] : [PDF 원본 파일 이름]\n",
     "    \"auction_policy.md\": \"auction_policy.pdf\",\n",
@@ -134,7 +132,7 @@
     "    print(\"\\n--- 일괄 변환 종료 ---\")\n",
     "    print(\"📢 **필수 후속 조치:**\")\n",
     "    print(\"1. 'pdfs' 폴더에 위 리스트와 정확히 일치하는 PDF 파일 6개를 넣어주세요.\")\n",
-    "    print(\"2. 'rag-api' 폴더에 생성된 모든 .md 파일을 열어 내용을 수동으로 정리해야 합니다.\")"
+    "    print(\"2. 'rag-api/docs' 폴더에 생성된 모든 .md 파일을 열어 내용을 수동으로 정리해야 합니다. (이 작업은 필수입니다.)\")"
    ],
    "id": "4079ea61ebd67ba7",
    "outputs": [
@@ -145,20 +143,25 @@
       "--- RAG 문서 일괄 PDF to Markdown 변환 시작 ---\n",
       "--- 'auction_policy.pdf' 변환 시작 ---\n",
       "✅ Markdown 파일 생성 완료: auction_policy.md -> C:\\mirae\\2차프로젝트\\ddauction-project\\chatbot\\rag-api\\docs\\auction_policy.md\n",
-      "❌ PDF 파일을 찾을 수 없습니다: C:\\mirae\\2차프로젝트\\ddauction-project\\chatbot\\pdfs\\used_item_guidelines.pdf\n",
-      "❌ PDF 파일을 찾을 수 없습니다: C:\\mirae\\2차프로젝트\\ddauction-project\\chatbot\\pdfs\\general_service_policy.pdf\n",
-      "❌ PDF 파일을 찾을 수 없습니다: C:\\mirae\\2차프로젝트\\ddauction-project\\chatbot\\pdfs\\shipping_delivery_policy.pdf\n",
-      "❌ PDF 파일을 찾을 수 없습니다: C:\\mirae\\2차프로젝트\\ddauction-project\\chatbot\\pdfs\\prohibited_items_policy.pdf\n",
-      "❌ PDF 파일을 찾을 수 없습니다: C:\\mirae\\2차프로젝트\\ddauction-project\\chatbot\\pdfs\\sales_and_returns_faq.pdf\n",
+      "--- 'used_item_guidelines.pdf' 변환 시작 ---\n",
+      "✅ Markdown 파일 생성 완료: used_item_guidelines.md -> C:\\mirae\\2차프로젝트\\ddauction-project\\chatbot\\rag-api\\docs\\used_item_guidelines.md\n",
+      "--- 'general_service_policy.pdf' 변환 시작 ---\n",
+      "✅ Markdown 파일 생성 완료: general_service_policy.md -> C:\\mirae\\2차프로젝트\\ddauction-project\\chatbot\\rag-api\\docs\\general_service_policy.md\n",
+      "--- 'shipping_delivery_policy.pdf' 변환 시작 ---\n",
+      "✅ Markdown 파일 생성 완료: shipping_delivery_policy.md -> C:\\mirae\\2차프로젝트\\ddauction-project\\chatbot\\rag-api\\docs\\shipping_delivery_policy.md\n",
+      "--- 'prohibited_items_policy.pdf' 변환 시작 ---\n",
+      "✅ Markdown 파일 생성 완료: prohibited_items_policy.md -> C:\\mirae\\2차프로젝트\\ddauction-project\\chatbot\\rag-api\\docs\\prohibited_items_policy.md\n",
+      "--- 'sales_and_returns_faq.pdf' 변환 시작 ---\n",
+      "✅ Markdown 파일 생성 완료: sales_and_returns_faq.md -> C:\\mirae\\2차프로젝트\\ddauction-project\\chatbot\\rag-api\\docs\\sales_and_returns_faq.md\n",
       "\n",
       "--- 일괄 변환 종료 ---\n",
       "📢 **필수 후속 조치:**\n",
       "1. 'pdfs' 폴더에 위 리스트와 정확히 일치하는 PDF 파일 6개를 넣어주세요.\n",
-      "2. 'rag-api' 폴더에 생성된 모든 .md 파일을 열어 내용을 수동으로 정리해야 합니다.\n"
+      "2. 'rag-api/docs' 폴더에 생성된 모든 .md 파일을 열어 내용을 수동으로 정리해야 합니다. (이 작업은 필수입니다.)\n"
      ]
     }
    ],
-   "execution_count": 8
+   "execution_count": 7
   }
  ],
  "metadata": {
