주피터노트 수정함.pdf파일네이밍맘대로해도됨

--- a/chatbot/pdf_converter.ipynb
+++ b/chatbot/pdf_converter.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-27T05:42:51.788628Z",
-     "start_time": "2025-11-27T05:42:51.765601Z"
+     "end_time": "2025-11-27T10:08:12.947399Z",
+     "start_time": "2025-11-27T10:08:12.909427Z"
     }
    },
    "cell_type": "code",
@@ -41,98 +41,46 @@
    ],
    "id": "90c010828ec95d5",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-27T05:51:23.244440Z",
-     "start_time": "2025-11-27T05:51:22.277347Z"
+     "end_time": "2025-11-27T10:09:27.456850Z",
+     "start_time": "2025-11-27T10:09:26.539589Z"
     }
    },
    "cell_type": "code",
    "source": [
     "import fitz  # PyMuPDF\n",
-    "import os\n",
     "from pathlib import Path\n",
-    "from typing import Dict, Union\n",
     "\n",
-    "# =========================================================\n",
-    "# 1. 파일 경로 및 문서 매핑 설정\n",
-    "# =========================================================\n",
-    "\n",
-    "# PDF 파일이 저장된 디렉토리 (현재 스크립트가 실행되는 곳의 'pdfs' 폴더)\n",
     "PDF_DIR = Path(\"./pdfs\")\n",
-    "\n",
-    "# 변환된 Markdown 파일을 저장할 디렉토리 (LangGraph API 폴더)\n",
     "MD_DIR = Path(\"./rag-api/docs\")\n",
     "MD_DIR.mkdir(parents=True, exist_ok=True)\n",
     "\n",
-    "# 🚨 중요: PDF 원본 파일 이름(값)과 RAG 시스템의 고정 식별자(키) 매핑\n",
-    "PDF_MAPPING: Dict[str, str] = {\n",
-    "    # [RAG 식별자 (MD 파일 이름)] : [PDF 원본 파일 이름]\n",
-    "    \"auction_policy.md\": \"auction_policy.pdf\",\n",
-    "    \"used_item_guidelines.md\": \"used_item_guidelines.pdf\",\n",
-    "    \"general_service_policy.md\": \"general_service_policy.pdf\",\n",
-    "    \"shipping_delivery_policy.md\": \"shipping_delivery_policy.pdf\",\n",
-    "    \"prohibited_items_policy.md\": \"prohibited_items_policy.pdf\",\n",
-    "    \"sales_and_returns_faq.md\": \"sales_and_returns_faq.pdf\",\n",
-    "}\n",
-    "\n",
-    "# =========================================================\n",
-    "# 2. PDF to MD 변환 함수\n",
-    "# =========================================================\n",
-    "\n",
     "def pdf_to_md(pdf_path: Path, md_path: Path):\n",
-    "    \"\"\"\n",
-    "    단일 PDF 파일을 읽어 Markdown 파일로 저장합니다.\n",
-    "    \"\"\"\n",
-    "    if not pdf_path.exists():\n",
-    "        print(f\"❌ PDF 파일을 찾을 수 없습니다: {pdf_path.resolve()}\")\n",
-    "        return\n",
-    "\n",
-    "    doc: Union[fitz.Document, None] = None\n",
-    "\n",
+    "    doc = None\n",
     "    try:\n",
     "        doc = fitz.open(pdf_path)\n",
-    "\n",
-    "        print(f\"--- '{pdf_path.name}' 변환 시작 ---\")\n",
-    "\n",
     "        with open(md_path, \"w\", encoding=\"utf-8\") as f:\n",
     "            for page in doc:\n",
     "                text = page.get_text(\"text\")\n",
-    "                # 페이지 구분을 위한 Markdown 표시\n",
     "                f.write(f\"\\n\\n## Page {page.number + 1}\\n\")\n",
     "                f.write(text.strip() + \"\\n\")\n",
-    "\n",
-    "        print(f\"✅ Markdown 파일 생성 완료: {md_path.name} -> {md_path.resolve()}\")\n",
-    "\n",
+    "        print(f\"✅ {pdf_path.name} -> {md_path.name}\")\n",
     "    except Exception as e:\n",
-    "        print(f\"❌ 변환 중 오류 발생 (파일: {pdf_path.name}): {e}\")\n",
+    "        print(f\"❌ 오류: {pdf_path.name} : {e}\")\n",
     "    finally:\n",
     "        if doc:\n",
     "            doc.close()\n",
     "\n",
-    "\n",
-    "# =========================================================\n",
-    "# 3. 메인 실행 (일괄 변환)\n",
-    "# =========================================================\n",
-    "\n",
     "if __name__ == \"__main__\":\n",
+    "    for pdf_file in PDF_DIR.glob(\"*.pdf\"):\n",
+    "        md_file = MD_DIR / (pdf_file.stem + \".md\")  # PDF 이름 그대로 .md\n",
+    "        pdf_to_md(pdf_file, md_file)\n",
     "\n",
-    "    print(\"--- RAG 문서 일괄 PDF to Markdown 변환 시작 ---\")\n",
-    "\n",
-    "    # PDF_MAPPING을 순회하며 모든 파일 변환\n",
-    "    for md_filename, pdf_filename in PDF_MAPPING.items():\n",
-    "        pdf_path = PDF_DIR / pdf_filename\n",
-    "        md_path = MD_DIR / md_filename\n",
-    "\n",
-    "        pdf_to_md(pdf_path, md_path)\n",
-    "\n",
-    "    print(\"\\n--- 일괄 변환 종료 ---\")\n",
-    "    print(\"📢 **필수 후속 조치:**\")\n",
-    "    print(\"1. 'pdfs' 폴더에 위 리스트와 정확히 일치하는 PDF 파일 6개를 넣어주세요.\")\n",
-    "    print(\"2. 'rag-api/docs' 폴더에 생성된 모든 .md 파일을 열어 내용을 수동으로 정리해야 합니다. (이 작업은 필수입니다.)\")"
+    "    print(\"모든 PDF 변환 완료!\")\n"
    ],
    "id": "4079ea61ebd67ba7",
    "outputs": [
@@ -140,28 +88,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- RAG 문서 일괄 PDF to Markdown 변환 시작 ---\n",
-      "--- 'auction_policy.pdf' 변환 시작 ---\n",
-      "✅ Markdown 파일 생성 완료: auction_policy.md -> C:\\mirae\\2차프로젝트\\ddauction-project\\chatbot\\rag-api\\docs\\auction_policy.md\n",
-      "--- 'used_item_guidelines.pdf' 변환 시작 ---\n",
-      "✅ Markdown 파일 생성 완료: used_item_guidelines.md -> C:\\mirae\\2차프로젝트\\ddauction-project\\chatbot\\rag-api\\docs\\used_item_guidelines.md\n",
-      "--- 'general_service_policy.pdf' 변환 시작 ---\n",
-      "✅ Markdown 파일 생성 완료: general_service_policy.md -> C:\\mirae\\2차프로젝트\\ddauction-project\\chatbot\\rag-api\\docs\\general_service_policy.md\n",
-      "--- 'shipping_delivery_policy.pdf' 변환 시작 ---\n",
-      "✅ Markdown 파일 생성 완료: shipping_delivery_policy.md -> C:\\mirae\\2차프로젝트\\ddauction-project\\chatbot\\rag-api\\docs\\shipping_delivery_policy.md\n",
-      "--- 'prohibited_items_policy.pdf' 변환 시작 ---\n",
-      "✅ Markdown 파일 생성 완료: prohibited_items_policy.md -> C:\\mirae\\2차프로젝트\\ddauction-project\\chatbot\\rag-api\\docs\\prohibited_items_policy.md\n",
-      "--- 'sales_and_returns_faq.pdf' 변환 시작 ---\n",
-      "✅ Markdown 파일 생성 완료: sales_and_returns_faq.md -> C:\\mirae\\2차프로젝트\\ddauction-project\\chatbot\\rag-api\\docs\\sales_and_returns_faq.md\n",
-      "\n",
-      "--- 일괄 변환 종료 ---\n",
-      "📢 **필수 후속 조치:**\n",
-      "1. 'pdfs' 폴더에 위 리스트와 정확히 일치하는 PDF 파일 6개를 넣어주세요.\n",
-      "2. 'rag-api/docs' 폴더에 생성된 모든 .md 파일을 열어 내용을 수동으로 정리해야 합니다. (이 작업은 필수입니다.)\n"
+      "✅ auction_policy.pdf -> auction_policy.md\n",
+      "✅ general_service_policy.pdf -> general_service_policy.md\n",
+      "✅ prohibited_items_policy.pdf -> prohibited_items_policy.md\n",
+      "✅ sales_and_returns_faq.pdf -> sales_and_returns_faq.md\n",
+      "✅ shipping_delivery_policy.pdf -> shipping_delivery_policy.md\n",
+      "✅ used_item_guidelines.pdf -> used_item_guidelines.md\n",
+      "모든 PDF 변환 완료!\n"
      ]
     }
    ],
-   "execution_count": 7
+   "execution_count": 10
   }
  ],
  "metadata": {
