챗봇 코드 간결하게바꿈

--- a/chatbot/pdf_converter.ipynb
+++ b/chatbot/pdf_converter.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-27T10:08:12.947399Z",
-     "start_time": "2025-11-27T10:08:12.909427Z"
+     "end_time": "2025-11-28T01:13:26.023433Z",
+     "start_time": "2025-11-28T01:13:24.809234Z"
     }
    },
    "cell_type": "code",
@@ -16,6 +16,7 @@
     "import json\n",
     "\n",
     "# pip install -r requirements.txt\n",
+    "#  cd .\\rag-api\\, \\ddauction-project\\chatbot\\rag-api> uvicorn api:app --reload --port 8000\n",
     "\n",
     "# .env 파일 로드\n",
     "load_dotenv()\n",
@@ -41,13 +42,13 @@
    ],
    "id": "90c010828ec95d5",
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-27T10:09:27.456850Z",
-     "start_time": "2025-11-27T10:09:26.539589Z"
+     "end_time": "2025-11-28T01:13:33.905763Z",
+     "start_time": "2025-11-28T01:13:31.913572Z"
     }
    },
    "cell_type": "code",
@@ -89,16 +90,19 @@
      "output_type": "stream",
      "text": [
       "✅ auction_policy.pdf -> auction_policy.md\n",
+      "✅ general_service_policy (1).pdf -> general_service_policy (1).md\n",
       "✅ general_service_policy.pdf -> general_service_policy.md\n",
+      "✅ prohibited_items_policy (1).pdf -> prohibited_items_policy (1).md\n",
       "✅ prohibited_items_policy.pdf -> prohibited_items_policy.md\n",
       "✅ sales_and_returns_faq.pdf -> sales_and_returns_faq.md\n",
       "✅ shipping_delivery_policy.pdf -> shipping_delivery_policy.md\n",
+      "✅ used_item_guidelines (1).pdf -> used_item_guidelines (1).md\n",
       "✅ used_item_guidelines.pdf -> used_item_guidelines.md\n",
       "모든 PDF 변환 완료!\n"
      ]
     }
    ],
-   "execution_count": 10
+   "execution_count": 2
   }
  ],
  "metadata": {
