챗봇관련코드수정함

--- a/chatbot/pdf_converter.ipynb
+++ b/chatbot/pdf_converter.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-28T07:03:52.797633Z",
-     "start_time": "2025-11-28T07:03:52.780821Z"
+     "end_time": "2025-12-01T01:38:46.355730Z",
+     "start_time": "2025-12-01T01:38:46.173955Z"
     }
    },
    "cell_type": "code",
@@ -41,13 +41,13 @@
    ],
    "id": "90c010828ec95d5",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-28T07:03:57.554251Z",
-     "start_time": "2025-11-28T07:03:56.422288Z"
+     "end_time": "2025-12-01T01:38:51.557115Z",
+     "start_time": "2025-12-01T01:38:48.589964Z"
     }
    },
    "cell_type": "code",
@@ -92,13 +92,19 @@
       "✅ general_service_policy.pdf -> general_service_policy.md\n",
       "✅ prohibited_items_policy.pdf -> prohibited_items_policy.md\n",
       "✅ sales_and_returns_faq.pdf -> sales_and_returns_faq.md\n",
+      "✅ sales_and_returns_faq_2.pdf -> sales_and_returns_faq_2.md\n",
+      "✅ sales_and_returns_faq_3.pdf -> sales_and_returns_faq_3.md\n",
+      "✅ sales_and_returns_faq_4.pdf -> sales_and_returns_faq_4.md\n",
       "✅ shipping_delivery_policy.pdf -> shipping_delivery_policy.md\n",
+      "✅ shipping_delivery_policy_2.pdf -> shipping_delivery_policy_2.md\n",
+      "✅ shipping_delivery_policy_3.pdf -> shipping_delivery_policy_3.md\n",
+      "✅ shipping_delivery_policy_4.pdf -> shipping_delivery_policy_4.md\n",
       "✅ used_item_guidelines.pdf -> used_item_guidelines.md\n",
       "모든 PDF 변환 완료!\n"
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 2
   }
  ],
  "metadata": {
