챗봇기능업그레이드함

--- a/chatbot/pdf_converter.ipynb
+++ b/chatbot/pdf_converter.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T01:38:46.355730Z",
-     "start_time": "2025-12-01T01:38:46.173955Z"
+     "end_time": "2025-12-11T06:04:17.527541Z",
+     "start_time": "2025-12-11T06:04:17.372540Z"
     }
    },
    "cell_type": "code",
@@ -46,8 +46,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T01:38:51.557115Z",
-     "start_time": "2025-12-01T01:38:48.589964Z"
+     "end_time": "2025-12-11T06:04:22.206480Z",
+     "start_time": "2025-12-11T06:04:19.755446Z"
     }
    },
    "cell_type": "code",
@@ -55,10 +55,14 @@
     "import fitz  # PyMuPDF\n",
     "from pathlib import Path\n",
     "\n",
-    "PDF_DIR = Path(\"./pdfs\")\n",
+    "PDF_DIR = Path(\"./pdfs\")     # PDF와 TXT가 모두 들어가는 폴더\n",
     "MD_DIR = Path(\"./rag-api/docs\")\n",
+    "\n",
     "MD_DIR.mkdir(parents=True, exist_ok=True)\n",
     "\n",
+    "# -------------------------------\n",
+    "# PDF → MD 변환\n",
+    "# -------------------------------\n",
     "def pdf_to_md(pdf_path: Path, md_path: Path):\n",
     "    doc = None\n",
     "    try:\n",
@@ -68,19 +72,46 @@
     "                text = page.get_text(\"text\")\n",
     "                f.write(f\"\\n\\n## Page {page.number + 1}\\n\")\n",
     "                f.write(text.strip() + \"\\n\")\n",
-    "        print(f\"✅ {pdf_path.name} -> {md_path.name}\")\n",
+    "        print(f\"📘 PDF 변환 완료: {pdf_path.name} → {md_path.name}\")\n",
     "    except Exception as e:\n",
-    "        print(f\"❌ 오류: {pdf_path.name} : {e}\")\n",
+    "        print(f\"❌ 오류(PDF): {pdf_path.name} : {e}\")\n",
     "    finally:\n",
     "        if doc:\n",
     "            doc.close()\n",
     "\n",
-    "if __name__ == \"__main__\":\n",
-    "    for pdf_file in PDF_DIR.glob(\"*.pdf\"):\n",
-    "        md_file = MD_DIR / (pdf_file.stem + \".md\")  # PDF 이름 그대로 .md\n",
-    "        pdf_to_md(pdf_file, md_file)\n",
     "\n",
-    "    print(\"모든 PDF 변환 완료!\")\n"
+    "# -------------------------------\n",
+    "# TXT → MD 변환\n",
+    "# -------------------------------\n",
+    "def txt_to_md(txt_path: Path, md_path: Path):\n",
+    "    try:\n",
+    "        with open(txt_path, \"r\", encoding=\"utf-8\") as txt:\n",
+    "            content = txt.read()\n",
+    "\n",
+    "        with open(md_path, \"w\", encoding=\"utf-8\") as md:\n",
+    "            md.write(\"# Converted from TXT\\n\\n\")\n",
+    "            md.write(content)\n",
+    "\n",
+    "        print(f\"📝 TXT 변환 완료: {txt_path.name} → {md_path.name}\")\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ 오류(TXT): {txt_path.name} : {e}\")\n",
+    "\n",
+    "\n",
+    "# -------------------------------\n",
+    "# 실행부\n",
+    "# -------------------------------\n",
+    "if __name__ == \"__main__\":\n",
+    "    for file in PDF_DIR.iterdir():\n",
+    "        if file.suffix.lower() == \".pdf\":\n",
+    "            md_file = MD_DIR / (file.stem + \".md\")\n",
+    "            pdf_to_md(file, md_file)\n",
+    "\n",
+    "        elif file.suffix.lower() == \".txt\":\n",
+    "            md_file = MD_DIR / (file.stem + \".md\")\n",
+    "            txt_to_md(file, md_file)\n",
+    "\n",
+    "    print(\"✨ 모든 PDF/TXT → MD 변환 완료!\")\n"
    ],
    "id": "4079ea61ebd67ba7",
    "outputs": [
@@ -88,19 +119,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ auction_policy.pdf -> auction_policy.md\n",
-      "✅ general_service_policy.pdf -> general_service_policy.md\n",
-      "✅ prohibited_items_policy.pdf -> prohibited_items_policy.md\n",
-      "✅ sales_and_returns_faq.pdf -> sales_and_returns_faq.md\n",
-      "✅ sales_and_returns_faq_2.pdf -> sales_and_returns_faq_2.md\n",
-      "✅ sales_and_returns_faq_3.pdf -> sales_and_returns_faq_3.md\n",
-      "✅ sales_and_returns_faq_4.pdf -> sales_and_returns_faq_4.md\n",
-      "✅ shipping_delivery_policy.pdf -> shipping_delivery_policy.md\n",
-      "✅ shipping_delivery_policy_2.pdf -> shipping_delivery_policy_2.md\n",
-      "✅ shipping_delivery_policy_3.pdf -> shipping_delivery_policy_3.md\n",
-      "✅ shipping_delivery_policy_4.pdf -> shipping_delivery_policy_4.md\n",
-      "✅ used_item_guidelines.pdf -> used_item_guidelines.md\n",
-      "모든 PDF 변환 완료!\n"
+      "📘 PDF 변환 완료: auction_policy.pdf → auction_policy.md\n",
+      "📝 TXT 변환 완료: auction_policy.txt → auction_policy.md\n",
+      "📘 PDF 변환 완료: general_service_policy.pdf → general_service_policy.md\n",
+      "📘 PDF 변환 완료: prohibited_items_policy.pdf → prohibited_items_policy.md\n",
+      "📘 PDF 변환 완료: sales_and_returns_faq.pdf → sales_and_returns_faq.md\n",
+      "📘 PDF 변환 완료: sales_and_returns_faq_2.pdf → sales_and_returns_faq_2.md\n",
+      "📘 PDF 변환 완료: sales_and_returns_faq_3.pdf → sales_and_returns_faq_3.md\n",
+      "📘 PDF 변환 완료: sales_and_returns_faq_4.pdf → sales_and_returns_faq_4.md\n",
+      "📘 PDF 변환 완료: shipping_delivery_policy.pdf → shipping_delivery_policy.md\n",
+      "📘 PDF 변환 완료: shipping_delivery_policy_2.pdf → shipping_delivery_policy_2.md\n",
+      "📘 PDF 변환 완료: shipping_delivery_policy_3.pdf → shipping_delivery_policy_3.md\n",
+      "📘 PDF 변환 완료: shipping_delivery_policy_4.pdf → shipping_delivery_policy_4.md\n",
+      "📘 PDF 변환 완료: used_item_guidelines.pdf → used_item_guidelines.md\n",
+      "✨ 모든 PDF/TXT → MD 변환 완료!\n"
      ]
     }
    ],
